fix: disable blurred element contents

--- a/style.css
+++ b/style.css
@@ -152,6 +152,11 @@ button:disabled {
   opacity: 0.5;
 }
 
+.blur-1 *,
+.blur-2 * {
+  pointer-events: none;
+}
+
 .overlay {
   position: fixed;
 
